# F411CEU6_SPI_ARM_driver

./: .gitignore  CMakeLists.txt  F411CEU6_SPI_ARM_driver Debug.launch  README  README.md  STM32F411CEUX_FLASH.ld  build.sh  toolchain.cmake
CMSIS/Config/: RTE_Device.h
CMSIS/Device/ST/STM32F4xx/Include/: stm32f401xc.h  stm32f401xe.h  stm32f405xx.h  stm32f407xx.h  stm32f410cx.h  stm32f410rx.h  stm32f410tx.h  stm32f411xe.h  stm32f412cx.h  stm32f412rx.h  stm32f412vx.h  stm32f412zx.h  stm32f413xx.h  stm32f415xx.h  stm32f417xx.h  stm32f423xx.h  stm32f427xx.h  stm32f429xx.h  stm32f437xx.h  stm32f439xx.h  stm32f446xx.h  stm32f469xx.h  stm32f479xx.h
CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
CMSIS/Driver/ST/STM32F4xx/Include/: GPIO_STM32F4xx.h
CMSIS/Driver/ST/STM32F4xx/Source/: GPIO_STM32F4xx.c
DOC/: STM32F411CEU6 - WeAct Black Pill V2.0 _ STM32-base project (31_12_2023 19_31_48).html
Sources/: main.c  main.h
Sources/DS1620/: ds1620.c  ds1620.h
Sources/EPD/: epd213.c  epd213.h  font5x7.h
